# data-science

./: .env  .gitignore  README.md  pyproject.toml
NumPy/: numpy-2.ipynb  numpy-3.ipynb  numpy_1.ipynb  numpy_1.py
Pandas/: pandas-1.ipynb
core/: install-apps.ipynb
data/: amazon-orders.csv  data.csv  product_price_types.csv  products.csv
module-1/: matplotlib.ipynb  numpy.ipynb  pandas-1.ipynb  pandas-2.ipynb  seaborn.ipynb
practice/: Pandas-intellipaat.ipynb  amazon-sales-1.ipynb  numpy-practice-1.ipynb  numpy-que.ipynb  pandas-practice.ipynb  probability-practice.ipynb  rough.ipynb
