[project]
name = "practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "notebook==7.4.7",
    "numpy==2.3.4",
    "pandas==2.3.3",
    "pandas-stubs==2.3.2.250926",
    "matplotlib==3.10.7",
    "seaborn==0.13.2",
]

[dependency-groups]
dev = [
    "ruff==0.14.4",
]
